<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/historique_reparations_ari_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historique_repa_ari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/prog_repa_ari_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/prog_repa_ari"
        app:layout_constraintBottom_toTopOf="@+id/effect_repa_ari_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historique_reparations_ari_button"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/effect_repa_ari_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/effect_repa_ari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historique_reparations_ari_button"
        app:layout_constraintVertical_bias="0.65999997" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:icon="@drawable/ic_baseline_home_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>